Prep for heroku deploy

--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,12 @@ build/Release
 
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
-node_modules
+/node_modules
 
 # Debug log from npm
 npm-debug.log
+
+# Recommended by heroku
+.DS_Store
+/*.env
 
