--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ejs": "^2.5.7",
     "express": "^4.15.2",
     "pug": "^2.0.0-rc.4",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "xkcd-password": "^2.0.0"
   },
   "engines": {
     "node": "6.2.1"
